# nim

./: .clang-format  .cproject  .gitignore  .project  .travis.yml  CMakeLists.txt  README.md
cmake/: catch.cmake  clang_tidy.cmake  cppcheck.cmake  google_sanitizers.cmake
conf/: VERSION
doc/: perf.md
source/: CMakeLists.txt
source/ai/: evaluate.cpp  evaluate.h  minmax.cpp  minmax.h  minmax_base.cpp  minmax_parallel.cpp
source/conf/: version
source/inc/: board.h  menu_view.h  nim.h  player.h  version.h  view_ascii.h
source/src/: board.cpp  main.cpp  menu_view.cpp  nim.cpp  view_ascii.cpp
test/: CMakeLists.txt
test/src/: test_board.cpp  test_minmax.cpp  test_nim.cpp
